refactor: refreshing Kotlin