@@ -1,72 +1,52 @@
+/*
+ * This file was generated by the Gradle 'init' task.
+ *
+ * This generated file contains a sample Kotlin application project to get you started.
+ * For more details take a look at the 'Building Java & JVM projects' chapter in the Gradle
+ * User Manual available at https://docs.gradle.org/6.8.3/userguide/building_java_projects.html
+ */
 buildscript {
-    ext.kotlin_version = '1.3.50'
+    ext.kotlin_version = '1.4.31'
+    ext.coroutines_version = '1.4.3'
     ext.owasp_version = '5.2.1'
     dependencies {
         classpath "org.owasp:dependency-check-gradle:$owasp_version"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
-    repositories {
-        mavenCentral()
-    }
 }
 
 plugins {
-    id 'java'
-    id 'maven-publish'
-    id 'org.jetbrains.kotlin.jvm' version '1.3.50'
-    id 'org.owasp.dependencycheck' version '5.2.1'
+    // Apply the org.jetbrains.kotlin.jvm Plugin to add support for Kotlin.
+    id 'org.jetbrains.kotlin.jvm' version "$kotlin_version"
+
+    // Apply the application plugin to add support for building a CLI application in Java.
+    id 'application'
 }
 
 repositories {
-    mavenLocal()
-    maven {
-        url = 'http://repo.maven.apache.org/maven2'
-    }
-    mavenCentral()
+    // Use JCenter for resolving dependencies.
+    jcenter()
 }
 
 dependencies {
-    compile 'org.apache.commons:commons-collections4:4.1'
-    compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
-    testCompile 'junit:junit:4.12'
+    // Align versions of all Kotlin components
+    implementation platform('org.jetbrains.kotlin:kotlin-bom')
+
+    // Use the Kotlin JDK 8 standard library.
+    implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk8'
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutines_version"
+
+    // This dependency is used by the application.
+    implementation 'com.google.guava:guava:29.0-jre'
+
+    // Use the Kotlin test library.
+    testImplementation 'org.jetbrains.kotlin:kotlin-test'
+
+    // Use the Kotlin JUnit integration.
+    testImplementation 'org.jetbrains.kotlin:kotlin-test-junit'
 }
 
-group = 'com.expedia.www'
-version = '1.0-SNAPSHOT'
-sourceCompatibility = '1.8'
-
-apply plugin: "org.owasp.dependencycheck"
-
-publishing {
-    publications {
-        maven(MavenPublication) {
-            from(components.java)
-        }
-    }
-}
-
-test {
-//    jvmArgs '--enable-preview'
-    testLogging {
-        showStandardStreams = true
-    }
-}
-jar {
-    manifest {
-        attributes "Main-Class": "gameoflife.app.GameOfLifeUI"
-    }
-    from {
-        configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
-    }
-}
-
-compileKotlin {
-    kotlinOptions {
-        jvmTarget = "1.8"
-    }
-}
-compileTestKotlin {
-    kotlinOptions {
-        jvmTarget = "1.8"
-    }
+application {
+    // Define the main class for the application.
+    mainClass = 'gameoflife.app.GameOfLifeUI'
 }
